--- a/client/main.html
+++ b/client/main.html
@@ -1,5 +1,6 @@
 <head>
   <title>SemanticBase</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
     <div id="app"></div>
